# Turtlebot-Project

./: ProjectPresentation.odp  README.md
TurtleBot_Project/: README.md
TurtleBot_Project/devel/: .catkin  local_setup.sh
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/adhoc_communication/: BroadcastCMgrRobotUpdateRequest.h  BroadcastStringRequest.h  CMgrDimensions.h  CMgrRobotUpdate.h  ChangeMCMembershipRequest.h  ExpAuctionElement.h  ExpCluster.h  MmListOfPoints.h  MmRobotPosition.h  RecvString.h  SendCMgrRobotUpdateRequest.h  SendExpAuctionRequest.h  SendMmMapUpdateResponse.h  SendMmRobotPositionResponse.h  SendOccupancyGridRequest.h  SendStringRequest.h  ShutDownRequest.h  ShutDownResponse.h
devel/include/amcl/: AMCLConfig.h
devel/include/base_local_planner/: Position2DInt.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h  clearCostmap.h  clearCostmapRequest.h  clearCostmapResponse.h
devel/include/explore_lite/: greedyAction.h  greedyActionFeedback.h  greedyActionGoal.h  greedyActionResult.h  greedyFeedback.h  greedyGoal.h  greedyResult.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/kobuki_msgs/: AutoDockingActionFeedback.h  AutoDockingGoal.h  AutoDockingResult.h  BumperEvent.h  ButtonEvent.h  CliffEvent.h  ExternalPower.h  SensorState.h
devel/include/laser_filters/: RadiusOutlierFilterConfig.h
devel/include/map_merger/: LogMapsRequest.h  LogMapsResponse.h  TransformPointRequest.h
devel/include/poi_database/: ROI.h
devel/include/ros_img_processor/: camera_POI_msg.h
devel/include/turtlebot_2dnav/: CarryingPerson.h  CarryingPersonRequest.h  CarryingPersonResponse.h  ROI.h  askNewFrontier.h  askNewFrontierRequest.h  askNewFrontierResponse.h  bounds_point_size.h  clearCostmap.h  clearCostmapRequest.h  clearCostmapResponse.h  fakeLaser.h  fakeLaserRequest.h  fakeLaserResponse.h  fake_bound.h  frontier.h  match_bound.h  recalculateBound.h  recalculateBoundRequest.h  recalculateBoundResponse.h  restrictCostmap.h  restrictCostmapRequest.h  restrictCostmapResponse.h  returnCost.h  returnCostRequest.h  returnCostResponse.h
devel/include/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialActionGoal.h  TurtlebotMoveActionFeedback.h
devel/include/turtlebot_calibration/: ScanAngle.h
devel/include/turtlebot_msgs/: PanoramaImg.h  SetFollowStateRequest.h  SetFollowStateResponse.h  TakePanoramaRequest.h
devel/lib/amcl/: amcl
devel/lib/astra_camera/: camera_node
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/costmap_restrictor/: costmap_restrictor
devel/lib/decision_maker/: decision
devel/lib/explore_lite/: explore
devel/lib/fake_laser/: fake_laser
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping
devel/lib/kobuki_keyop/: keyop
devel/lib/laser_filters/: generic_laser_filter_node  scan_to_cloud_filter_chain  scan_to_scan_filter_chain  test_scan_filter_chain
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/multirobot_map_merge/: map_merge
devel/lib/navfn/: navfn_node
devel/lib/openni2_camera/: list_devices
devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  costmap_2d.pc  (+52 more)
src/astra_img_processor/: CMakeLists.txt  package.xml
src/astra_img_processor/launch/: astra_img_processor.launch
src/astra_img_processor/src/: astra_img_processor_main.cpp  astra_img_processor_node.cpp  astra_img_processor_node.h
src/costmap_restrictor/: CMakeLists.txt  package.xml
src/costmap_restrictor/include/: costmap_restrictor.h
src/costmap_restrictor/launch/: costmap_restrictor.launch
src/costmap_restrictor/src/: costmap_restrictor.cpp  costmap_restrictor_main.cpp
src/decision_maker/: CMakeLists.txt  package.xml
src/decision_maker/include/: data.h  decision_maker.h  math_operations.h
src/decision_maker/src/: data.cpp  decision_maker.cpp  decision_maker.h  decision_maker_main.cpp  math_operations.cpp
src/fake_laser/: CMakeLists.txt
src/fake_laser/include/: fake_laser.h
src/fake_laser/src/: fake_laser.cpp  fake_laser_main.cpp
src/poi_database/: CMakeLists.txt  package.xml
src/poi_database/src/: database.cpp  database.h  database_main.cpp
src/ros_img_processor/: CMakeLists.txt
src/ros_img_processor/launch/: astra_img_processor.launch  ros_img_processor.launch
src/ros_img_processor/msg/: camera_POI_msg.msg
src/ros_img_processor/src/: astra_img_processor_node.cpp  ros_img_processor_main.cpp  ros_img_processor_node.cpp  ros_img_processor_node.h
src/turtlebot_2dnav/: CMakeLists.txt
src/turtlebot_2dnav/action/: greedy.action
src/turtlebot_2dnav/launch/: configuration.rviz  logic_demo.launch  navigation_demo.launch  turtlebot_exploration.launch  turtlebot_exploration_demo.launch
src/turtlebot_2dnav/launch/includes/: simulated_kobuki_lidar.launch  simulated_kobuki_lidar.launch.xml
src/turtlebot_2dnav/maps/: turtlebotmapa1.pgm  turtlebotmapa1.yaml
src/turtlebot_2dnav/msg/: ROI.msg  bounds_point_size.msg  fake_bound.msg  frontier.msg  match_bound.msg
src/turtlebot_2dnav/param/: costmap_common_params.yaml  costmap_restrictor_params.yaml  decision_maker_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  laser_filter.yaml  local_costmap_params.yaml  local_trajectory_planner_params.yaml  move_base_params.yaml
src/turtlebot_2dnav/robots/: kobuki_hexagons_astra_rplidar.urdf.xacro
src/turtlebot_2dnav/sensors/: rplidar.urdf.xacro
src/turtlebot_2dnav/srv/: CarryingPerson.srv  askNewFrontier.srv  fakeLaser.srv  fakeObstacles.srv  recalculateBound.srv  restrictCostmap.srv  returnCost.srv
turtlebot_2dnav/: CMakeLists.txt
turtlebot_2dnav/launch/: turtlebot_exploration.launch  turtlebot_exploration_demo.launch  turtlebot_world.launch
turtlebot_2dnav/param/: costmap_common_params.yaml
turtlebot_2dnav/robots/: kobuki_hexagons_kinect_rplidar.urdf.xacro
(+521 files in other folders)
