<?xml version="1.0"?>
<package format="2">
  <name>astra_img_processor</name>
  <version>0.0.0</version>
  <description>The astra_img_processor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="teresa@todo.todo">teresa</maintainer>

  <license>BSD</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>ros_image_processor</depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
    
 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
